k8s_examples/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dockpress-service
spec:
  type: LoadBalancer
  loadBalancerIP: ""
  selector:
    app: dockpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
