k8s_examples/omnibus.yml

# Create a deployment for our Kubernetes cluster
#
# Defines the number of replicas, how updates and restarts happen and the
# resources used for each node.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockpress
  labels:
    app: dockpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dockpress
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: dockpress
        environment: production
        type: webserver
    spec:
      spec:
      volumes:
      - name: tmpfs
        emptyDir:
          sizeLimit: 5Gi
      - name: dockpress-wp-root-nfs-pvc
        persistentVolumeClaim:
          claimName: dockpress-wp-root-nfs-pvc
          readOnly: false
      - name: secret-credentials
        secret:
          secretName: credentials
      containers:
      - image: eu.gcr.io/dockerpress-379014/dockpress/dockpress:latest
        name: dockpress
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 512Mi
            cpu: 500m
          limits:
            memory: 2048Mi
            cpu: 1000m
            ephemeral-storage: 5Gi
        volumeMounts:
        - name: tmpfs
          mountPath: /tmp
        - name: dockpress-wp-root-nfs-pvc
          mountPath: /var/www/html
        - name: 'secret-credentials'
          mountPath: /secrets
          readOnly: true
        livenessProbe:
          httpGet:
            path: '/'
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 3
status: {}

---

# Create a service with an internal IP address
#
# This will then be exposed to the public Internet using an ingress, using
# http-to-https forwarding and a managed TLS certificate.
apiVersion: v1
kind: Service
metadata:
  name: dockpress-service
spec:
  selector:
    app: dockpress
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

# Create a GKE managed ingress services
#
# This one combines the certificate, frontend config and service above to create
# a publicly available ingress. Remember that you are supposed to reserve an IP
# address as well before running this.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dockpress-external-ip-address
    networking.gke.io/v1beta1.FrontendConfig: "dockpress-frontend-config"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: dockpress-service
      port:
        number: 80
